tests/compile-errors/src/no-provider-file.stderr
error: proc macro panicked
 --> $DIR/no-provider-file.rs:3:1
  |
3 | usdt::dtrace_provider!("non-existent.d");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Could not read D source file "non-existent.d" in "$WORKSPACE/target/tests/compile-errors": Os { code: 2, kind: NotFound, message: "No such file or directory" }
